--- a/input-type-password.html
+++ b/input-type-password.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-sub>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -20,12 +20,14 @@
                 <div class="page--helper-options">
                     <button id="value-random">Set random Text</button>
                     <button id="value-clear">Clear Value</button>
+                    <button id="toggle-type">Toggle Type</button>
+                    <button id="toggle-state">Toggle State</button>
                     <input id="zoom" type="range" min="1" max="12" value="1">
                 </div>
             </div>
         </div>
 
-        <div class="elements">
+        <div class="element">
             <input id="input-type-password" type="password">
         </div>
     </body>
